--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@openai/agents": "^0.3.7",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
@@ -18,7 +19,9 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "swr": "^2.3.8",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
