--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "pretest": "echo '\n📋 Running Recommendations Page Tests...\n📄 See __tests__/TEST_CHECKLIST.md for what each test checks\n'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:simple": "jest --verbose 2>&1 | tee test-results.txt && echo '\n✅ Results saved to test-results.txt'",
+    "test:explain": "node scripts/explain-tests.js"
   },
   "dependencies": {
     "@openai/agents": "^0.3.7",
@@ -25,11 +31,17 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
