Add Supabase integration and review-based recommendations
- Migrate from file-based storage to Supabase database
- Add users and reviews tables with migrations
- Create Supabase client utilities for server-side operations
- Update database layer to use Supabase async operations
- Add review API endpoints (POST/GET /api/reviews)
- Integrate review saving when users like/dislike games
- Enhance recommendation agent to analyze user reviews
- Add personalized recommendation messages based on reviews
- Update recommendation descriptions to reference reviewed games
- Add review message display on recommendation cards
- Include Supabase setup documentation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@openai/agents": "^0.3.7",
+    "@supabase/supabase-js": "^2.90.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
